objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c.object
<CustomObject>
    <description>Milestone transaction table for change request SVTs.</description>
    <fields>
        <fullName>BMCServiceDesk__Cc__c</fullName>
        <label>Cc</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Execution_Time__c</fullName>
        <description>Milestone transaction execution time</description>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKChange_Service_Target__c</fullName>
        <description>Change Service Target that is related to this milestone.</description>
        <label>Change Service Target</label>
        <referenceTo>BMCServiceDesk__Change_Request_Service_Target__c</referenceTo>
        <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
        <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Change record related to this milestone / SVT</description>
        <label>Change</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
        <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA_Milestone_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SLA Milestone Action</description>
        <label>SLA Milestone Action</label>
        <referenceTo>BMCServiceDesk__SLA_Milestone_Actions__c</referenceTo>
        <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
        <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SLA Milestone</description>
        <label>SLA Milestone</label>
        <referenceTo>BMCServiceDesk__SLA_Milestones__c</referenceTo>
        <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
        <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
        <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
        <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Type__c</fullName>
        <formula>BMCServiceDesk__FKSLA_Milestone__r.BMCServiceDesk__Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Milestone Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <description>Status of the milestone transaction</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__To__c</fullName>
        <label>To</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_Ref_ID__c</fullName>
        <label>User Ref ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SLA Milestone Change Transaction</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SLA Milestone Change Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Change Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>